--- a/Full_stack_web _development/projects/index.html
+++ b/Full_stack_web _development/projects/index.html
@@ -1,93 +1,81 @@
-<!doctype html>
-<html>
-    <head>	
-        <meta charset="utf-8">
-        <meta name="description" content="">
-        <meta name="keywords" content="">
-        <meta name="author" content="Pragmatic Mates s.r.o. - http://pragmaticmates.com">
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-        <link href="http://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet" type="text/css">
-        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="css/demo.css">
-
-        <title>jQuery Final Countdown Plugin</title>
+        <title>Responsive WebPage</title>
+        <link rel="stylesheet" href="responsive.css">
+        <link rel="stylesheet" media="screen and (max-width: 1518px)" href="responsive.css">
+        <link rel="stylesheet" href="style.css">
     </head>
-
     <body>
-
-        <div class="countdown countdown-container container">
-            <div class="clock row">
-                <div class="clock-item clock-days countdown-time-value col-sm-6 col-md-3">
-                    <div class="wrap">
-                        <div class="inner">
-                            <div id="canvas-days" class="clock-canvas"></div>
-
-                            <div class="text">
-                                <p class="val">0</p>
-                                <p class="type-days type-time">DAYS</p>
-                            </div><!-- /.text -->
-                        </div><!-- /.inner -->
-                    </div><!-- /.wrap -->
-                </div><!-- /.clock-item -->
-
-                <div class="clock-item clock-hours countdown-time-value col-sm-6 col-md-3">
-                    <div class="wrap">
-                        <div class="inner">
-                            <div id="canvas-hours" class="clock-canvas"></div>
-
-                            <div class="text">
-                                <p class="val">0</p>
-                                <p class="type-hours type-time">HOURS</p>
-                            </div><!-- /.text -->
-                        </div><!-- /.inner -->
-                    </div><!-- /.wrap -->
-                </div><!-- /.clock-item -->
-
-                <div class="clock-item clock-minutes countdown-time-value col-sm-6 col-md-3">
-                    <div class="wrap">
-                        <div class="inner">
-                            <div id="canvas-minutes" class="clock-canvas"></div>
-
-                            <div class="text">
-                                <p class="val">0</p>
-                                <p class="type-minutes type-time">MINUTES</p>
-                            </div><!-- /.text -->
-                        </div><!-- /.inner -->
-                    </div><!-- /.wrap -->
-                </div><!-- /.clock-item -->
-
-                <div class="clock-item clock-seconds countdown-time-value col-sm-6 col-md-3">
-                    <div class="wrap">
-                        <div class="inner">
-                            <div id="canvas-seconds" class="clock-canvas"></div>
-
-                            <div class="text">
-                                <p class="val">0</p>
-                                <p class="type-seconds type-time">SECONDS</p>
-                            </div><!-- /.text -->
-                        </div><!-- /.inner -->
-                    </div><!-- /.wrap -->
-                </div><!-- /.clock-item -->
-            </div><!-- /.clock -->
-        </div><!-- /.countdown-wrapper -->
-
-
-
-        <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-        <script type="text/javascript" src="js/kinetic.js"></script>
-        <script type="text/javascript" src="../jquery.final-countdown.js"></script>
-        <script type="text/javascript">  
-            $('document').ready(function() {
-                'use strict';
-                
-                $('.countdown').final_countdown({
-                    'start': 1362139200,
-                    'end': 1388461320,
-                    'now': 1387461319        
-                });
-            });
-        </script>
-
+        <div class="container">
+            <span>&#9776</span>
+            <nav id="navbar">
+                <div id="logo">
+                    <h1>BookPod<b>.</b></h1>
+                </div>
+                <ul>
+                    <li class="item">Home</li>
+                    <li class="item">Categories</li>
+                    <li class="item">Podcasts</li>
+                </ul>
+                <input type="text" id="btn" placeholder= "          Search...">
+                <img src="images/searchicon.png.png" alt="" id="search">
+            </nav>
+            <div class="containerTwo">
+                <h1 id="div1">
+                    Home of <b>100,000</b> +<br>books and podcasts             
+                 </h1>
+                <div id="div2">Get the latest books and listen to the <br>latest podcasts all in one place</div>
+                <input type="search" id="btn2" value="Get Started">
+            </div>
+            <div class="containerThree">
+                <img src="images/img2.png" alt="#" id="bookimage">
+                <div id="RandomContent">
+                        <div id="item1">LOREM IPSUM</div>
+                        <div id="item2">Lorem Ipsum <br> dolar sit amet</div>
+                        <div id="item3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        </div>
+                </div>
+                <img src="images/Socialmedia.png" alt="" id="media">
+            </div>
+            <div class="containerWriters">
+                <h1 id="New">Featured Writers</h1>
+                <div class="img1">
+                    <img src="images/Braithwaite.png" alt="" style="width: 100px; height: 100px; border-radius: 50%;">
+                    <h4>E R Braithwaite</h4>
+                </div>
+                <div class="img2">
+                    <img src="images/Levy.png" alt="" style="width: 100px; height: 100px; border-radius: 50%;">
+                    <h4>Andrea Levy</h4>
+                </div>
+                <div class="img3">
+                    <img src="images/king.png" alt="" style="width: 100px; height: 100px; border-radius: 50%;">
+                    <h4>Stephan king</h4>
+                </div>
+                <div class="img4">
+                    <img src="images/Amado.png" alt="" style="width: 100px; height: 100px; border-radius: 50%;">
+                    <h4>Jorge Amado</h4>
+                </div>
+                <div class="img5">
+                    <img src="images/Forman.png" alt="" style="width: 100px; height: 100px; border-radius: 50%;">
+                    <h4>Gayle Forman</h4>
+                </div>
+                <div class="img6">
+                    <img src="images/Tharoor.png" alt="" style="width: 100px; height: 100px; border-radius: 50%;">
+                    <h4>Shashi Tharoor</h4>
+                </div>
+                <div class="img7">
+                    <img src="images/Rowling.png" alt="" style="width: 100px; height: 100px; border-radius: 50%;">
+                    <h4>J.K. Rowling</h4>
+                </div>
+                <div class="img8">
+                    <img src="images/Green.png" alt="" style="width: 100px; height: 100px; border-radius: 50%;">
+                    <h4>John Green</h4>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
